--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>My Portfolio | Devan Firdaus</title>
+    <title>My Portfolio | Ulum Kapirangu</title>
   </head>
   <body id="home"> 
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Devan Firdaus</a>
+        <a class="navbar-brand" href="#">Ulum Kapirangu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,8 +42,8 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/devan.jpeg" alt="gambar" width="175" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Devan Firdaus Y.</h1></h1>
+      <img src="img/gambar.jpg" alt="gambar" width="175" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4">Ulum Kapirangu</h1></h1>
       <p class="lead">student</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L30,85.3C60,107,120,149,180,170.7C240,192,300,192,360,170.7C420,149,480,107,540,85.3C600,64,660,64,720,74.7C780,85,840,107,900,133.3C960,160,1020,192,1080,176C1140,160,1200,96,1260,58.7C1320,21,1380,11,1410,5.3L1440,0L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
     </section>
@@ -179,7 +179,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>Create with love by <a href="https://www.instagram.com/" style="color: white;">Devan Firdaus Yona Negara</a></p>
+      <p>Create with love by <a href="https://www.instagram.com/" style="color: white;">Ulum kapirangu</a></p>
     </footer>
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
